# saferotp

./: .gitignore  CMakeLists.txt  README.md  rebuild
docs/: API.md  BUILD.md  PURPOSE.md
examples/: CMakeLists.txt
examples/00_hello_otp/: CMakeLists.txt
examples/01_link_saferotp_lib/: CMakeLists.txt  bsd_3_clause.txt
saferotp/saferotp_lib/: saferotp_debug_stub.h
saferotp_lib/: CMakeLists.txt  saferotp_rw.c
saferotp_lib/lib/: saferotp_debug_stub.h  saferotp_rw.c
saferotp_lib/saferotp_inc/: saferotp.h
saferotp_lib/saferotp_lib/: saferotp_debug_stub.c
